fix: fix errors when clicking shift

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -50,8 +50,9 @@
       background-color: rgba(255, 255, 255, 0.8);
     }
 
-    &_caps {
+    &_active {
       border: 3px solid rgb(45, 248, 45);
+      background-color: rgba(255, 255, 255, 0.8);
     }
 
   }
